--- a/lakeview-apartments.html
+++ b/lakeview-apartments.html
@@ -9,87 +9,60 @@
   </head>
   <body>
     <div class="wrap">
-    <header class="main-header">
-        <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-            <nav class="main-nav">
-                  <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Landlords</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">Tenants</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="#">About Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                          <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                          <li><a href="letting-management.html">Letting Management Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="properties.html">Properties</a></li>
-                </ul>
-              </nav>
-              <nav class="dropdown">
-                <ul>
-                  <li><a href="index-mail-test.html">Contact Us</a></li>
-                        <div class="dropdown-content">
-                          <li><a href="php/index-contact.html">Enquiry Form</a></li>
-                          <li><a href="#">Telephone Contact: 07834 342897</a></li>
-                          <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                        </div>
-                </ul>
-              </nav>
-            </nav>
-    </header>
+      <header style="display:flex">
+        <!-- <span class="headertest">doingverynicely</span> -->
+        <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
+          <nav class="main-nav">
+            <a href="firstview-lettings-home.html">Home</a>
+            <a href="properties.html">Properties</a>
+            <div class="drp">
+              <a href="landlord-services.html">Landlords</a>
+                <div class="ondrop">
+                  <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                  <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+                  <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+                  <li><a href="letting-management.html">Letting Management Service</a></li>
+                </div>
+            </div>
+            <div class="drp">
+            <a href="tenant-services.html">Tenants</a>
+              <div class="ondrop">
+                <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+                <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+              </div>
+            </div>
+            <a href="about-firstview-lettings.html">About</a>
+            <a href="php/index-contact.html">Contact</a>
+          </nav>
+      </header>
     <main>
           <h1 class="subp-title"> Lakeview Apartments - Fishponds - Bristol</h1>
       <div class="cstandard">
               <div class="layout">
               <div id="carouselExampleIndicators" class="carousel slide col-6" data-ride="carousel">
                 <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#slide-1" data-slide-to="0" class="active"></li>
+                  <li data-target="#slide-2" data-slide-to="1"></li>
                   <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/thumb-lakeview.gif" class="d-block w-100" alt="...">
+                    <img src="images/thumb-lakeview.gif" class="d-block w-100" alt="front view image of lakeview apartment building">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/plan-lakeview.gif" class="d-block w-100" alt="...">
+                    <img src="images/plan-lakeview.gif" class="d-block w-100" alt="floorplan image of lakeview apartment">
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#slide-1" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#slide-2" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
 
               </div>
-
 
                 <div>
                     <h2>Features</h2>
@@ -104,19 +77,42 @@
                       <li>Council tax band B.</li>
                     </ul>
 
-                  <div>
-                      <h2>Accommodation Dimensions</h2>
-                      <ul>
-                        <li>Lounge/Diner 14'5" x 11'9" (4.4m x 3.6m)</li>
-                        <li>Bedroom 10'9" x 8'8" (3.28m x 2.64m)</li>
-                        <li>Kitchen/Breakfast Room 11'8" x 7'2" (3.56m x 2.2m)</li>
-                      </ul>
+                    <div class="rec">
+                      <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834 342897">07834 342897</a>
+                    </div>
                   </div>
-                  <div class="rec">
-                    <button type="button" class="btn btn-outline-primary">Enquire now</button>Or call us on <a href="tel:07834 342897">07834 342897</a>
-                  </div>
-                </div>
+
+
               </div>
+
+              <div class="property">
+
+                  <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Dimensions</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Conditions</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+  </li>
+</ul>
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <ul>
+      <li>Lounge/Diner 14'5" x 11'9" (4.4m x 3.6m)</li>
+      <li>Bedroom 10'9" x 8'8" (3.28m x 2.64m)</li>
+      <li>Kitchen/Breakfast Room 11'8" x 7'2" (3.56m x 2.2m)</li>
+    </ul>
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <p>The apartment is let unfurnished initially on a 6 month fixed term Assured Shorthold Tenancy Agreement. (copy available on request).</p>
+    <p>Satisfactory references and credit checks required. Monthly rent payable by standing order monthly in advance. Deposit required as security against damages.</p>
+  </div>
+  <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+</div>
+            </div>
               <div class="property">
                 <h2  class="left">About this property</h2>
                   <!-- <ul class="cstandard"> -->
@@ -132,36 +128,32 @@
                       junction is also the access point to the M5/M4 motorway network just 2 miles away. The Cribbs
                       Causeway shopping centre, which includes restaurants and multi theatre cinema complex is
                       within a 30 minute drive on junction 16 of the M5.</p>
-                  </div>
-              <div class="property">
-                <h2 class="left">Conditions</h2>
-                  <p>The apartment is let unfurnished initially on a 6 month fixed term Assured Shorthold Tenancy Agreement. (copy available on request).</p>
-                  <p>Satisfactory references and credit checks required. Monthly rent payable by standing order monthly in advance. Deposit required as security against damages.</p>
               </div>
               <span><a href="properties.html">View more properties</a></span>
       </div>
     </main>
   </div>
 
-    <footer class="main-footer">
-      <div>
-        <span>Enquiries</span><br>
-        <a href="tel:07834 342897">07834 342897</a><br>
-        <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
-      </div>
-      <div class="resources">
-        <span>Resources</span><br>
-        <a>The Property Ombudsman</a>
-      </div>
-      <span id="copy">&copy Firstview Lettings Ltd 2004-2020</span>
-      <div>
-       <a href="legal.html" id="legal">Legal Notices</a><br>
-       <a href="../privacy-statement.html">Privacy Policy</a>
-     </div>
-
-
-       <p class="webdev">Crafted by Firstview Lettings Ltd</p>
-    </footer>
+  <footer class="main-footer">
+    <div>
+      <span>Enquiries</span><br>
+      <a href="tel:07834 342897">07834 342897</a><br>
+      <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+    </div>
+    <span>
+      Firstview Lettings Ltd.<br>
+      Registration No: 5098005<br>
+      Registered Office:<br>
+      367B Church Rd, Frampton Cotterell,<br>
+      Bristol, BS36 2AQ
+    </span>
+    <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+    <div>
+     <a href="legal.html" id="legal">Legal Notices</a><br>
+     <a href="">Privacy Policy</a>
+    </div>
+    <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+  </footer>
 
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
