--- a/legal.html
+++ b/legal.html
@@ -20,109 +20,88 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 //-->
 </script>
 </head>
-<div class="wrap">
-<header class="main-header">
-    <a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a>
-        <nav class="main-nav">
-              <li><a  class="dropbtn" href="firstview-lettings-home.html">Home</a></li>
-          <nav class="dropdown">
-            <ul>
-              <li><a href="#">Landlords</a></li>
-                    <div class="dropdown-content">
-                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                      <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                      <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                      <li><a href="letting-management.html">Letting Management Service</a></li>
-                    </div>
-            </ul>
-          </nav>
-          <nav class="dropdown">
-            <ul>
-              <li><a href="#">Tenants</a></li>
-                    <div class="dropdown-content">
-                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                      <li><a href="tenant-enquiry.html">Tenant Enquiries</a></li>
-                    </div>
-            </ul>
-          </nav>
-          <nav class="dropdown">
-            <ul>
-              <li><a href="#">About Us</a></li>
-                    <div class="dropdown-content">
-                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                      <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                      <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                      <li><a href="letting-management.html">Letting Management Service</a></li>
-                    </div>
-            </ul>
-          </nav>
-          <nav class="dropdown">
-            <ul>
-              <li><a href="properties.html">Properties</a></li>
-                    <div class="dropdown-content">
-                      <li><a href="tenancy_application.html">Tenancy Applications</a></li>
-                      <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
-                      <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                      <li><a href="letting-management.html">Letting Management Service</a></li>
-                    </div>
-            </ul>
-          </nav>
-          <nav class="dropdown">
-            <ul>
-              <li><a href="contact-us.html">Contact Us</a></li>
-                    <div class="dropdown-content">
-                      <li><a href="contact-us.html">Enquiry Form</a></li>
-                      <li><a href="#">Telephone Contact: 07834 342897</a></li>
-                      <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
-                      <li><a href="letting-management.html">Company Details:
-                            Firstview Lettings Ltd.
-                            Registration No: 5098005
-
-                            Registered Office:
-                            367B Church Rd, Frampton Cotterell, Bristol, BS36 2AQ</a></li>
-                    </div>
-            </ul>
-          </nav>
-        </nav>
-</header>
-
 <body>
-<h1>Legal Notices</h1>
-<div>
+<div class="wrap">
+  <header style="display:flex">
+    <!-- <span class="headertest">doingverynicely</span> -->
+    <div><a href="firstview-lettings-home.html"><img src="images/main-logo.jpg" id="main-logo"></a></div>
+      <nav class="main-nav">
+        <a href="firstview-lettings-home.html">Home</a>
+        <a href="properties.html">Properties</a>
+        <div class="drp">
+          <a href="landlord-services.html">Landlords</a>
+            <div class="ondrop">
+              <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+              <li><a href="tenant-introduction-services.html">Tenant Introduction Service</a></li>
+              <li><a href="inventory-preparation-services.html">Tenant Introduction & Inventory Preparation Service</a></li>
+              <li><a href="letting-management.html">Letting Management Service</a></li>
+            </div>
+        </div>
+        <div class="drp">
+        <a href="tenant-services.html">Tenants</a>
+          <div class="ondrop">
+            <li><a href="tenancy_application.html">Tenancy Applications</a></li>
+            <li><a href="tenant-enquiries.html">Tenant Enquiries</a></li>
+          </div>
+        </div>
+        <a href="about-firstview-lettings.html">About</a>
+        <a href="php/index-contact.html">Contact</a>
+      </nav>
+  </header>
 
-    <h2><span class="tableTitle">Legal Notice - Privacy Statement </span></h2>
-      <p class="normal">Firstview Lettings Ltd recognises that privacy is an important concept in internet usage and is therefore committed to ensuring that the privacy of our users is protected. You can keep up to date with any changes to Firstview Letting Ltd's privacy policy by checking this page.</p>
-      <p class="normal"><span class="heading1">Collection and Usage</span><br>
+
+<main>
+<h1 class="subp-title">Legal Notices</h1>
+<div class="cstandard normal">
+
+    <h2>Legal Notice - Privacy Statement</h2>
+      <p>Firstview Lettings Ltd recognises that privacy is an important concept in internet usage and is therefore committed to ensuring that the privacy of our users is protected. You can keep up to date with any changes to Firstview Letting Ltd's privacy policy by checking this page.</p>
+      <p><span class="heading1">Collection and Usage</span><br>
         Firstview Lettings Ltd collects usage statistics through our access log. This provides us with such details as visitor domain names, the time of visits, web browser, length of visit, IP address and referring domains. This information is used solely for the purpose of developing the business of Firstview Lettings Ltd. Firstview Lettings Ltd also uses forms to take customer enquiries. The information gathered from our forms is relevant only to the purpose of that form. This information is only used so that Firstview Lettings Ltd can answer customer queries.</p>
-      <p class="normal">The information gathered by Firstview Lettings Ltd will only be made available to those of our employees and business partners who need to see it in connection with the purpose for which you have provided the information. We will not pass your personal data to other organisations or individuals without your express consent.</p>
-      <p class="normal"><span class="heading1">Implications</span><br>
-  Use of the Firstview Lettings Ltd website indicates that you are willing to accept the content of this privacy policy. Sites that are linked to from Firstview Lettings Ltd may have their own privacy policy and these should be checked on arriving at another site from Firstview Lettings Ltd. Firstview Lettings Ltd can accept no responsibility for the privacy policies of these other sites and recommends users should always check the privacy policy of a site they visit. </p>
-      <p class="normal">Email us at <a href="mailto:privacy@FirstViewLettings.co.uk">privacy@FirstViewLettings.co.uk</a></p>
-    <p class="normal">&nbsp;</p>
+      <p >The information gathered by Firstview Lettings Ltd will only be made available to those of our employees and business partners who need to see it in connection with the purpose for which you have provided the information. We will not pass your personal data to other organisations or individuals without your express consent.</p>
+      <p ><span class="heading1">Implications</span><br>
+        Use of the Firstview Lettings Ltd website indicates that you are willing to accept the content of this privacy policy. Sites that are linked to from Firstview Lettings Ltd may have their own privacy policy and these should be checked on arriving at another site from Firstview Lettings Ltd. Firstview Lettings Ltd can accept no responsibility for the privacy policies of these other sites and recommends users should always check the privacy policy of a site they visit. </p>
+      <p >Email us at <a href="mailto:privacy@Firstviewlettings.co.uk">privacy@Firstviewlettings.co.uk</a></p>
+    <p >&nbsp;</p>
 
 </div>
-<div>
+<div class="cstandard normal">
 
-    <h2><span class="tableTitle">Legal Notice - Disclaimer</span></h2>
-      <p class="normal">All steps have been taken to ensure that the information published on this site is as accurate as possible. The providers or our agents, cannot accept responsibility for any errors, omissions or inaccuracies or for any consequence arising as a result, to either those that choose to advertise here or those that use any of the services provided on this site.</p>
-      <p class="normal">In addition we reserve the right to modify the information held on this web site without notice, and whilst we are willing to amend details on request by the original supplier of such details we provide no guarantees of how long it may take to effect such changes.</p>
-      <p class="normal">The providers or our agents cannot accept responsibility for any loss, injury or damage sustained as a result of using any of the services provided on this web site, or by referrals to any other individual/organisation that appear on this web-site, whether financial, material, physical or mental.</p>
-      <p class="normal">Unless clearly stated, any opinions, recommendations, information or advice that appear on this site are not necessarily those of the providers of this site, and caution should be exercised before acting upon any opinions, recommendations, information or advice.</p>
-      <p class="normal"> This site also contains links to other web sites which are completely independent of this web site and we make no representation or warranty as to the accuracy, completeness or authenticity of any opinions, recommendations, information or advice contained in any such linked web site. Furthermore, we do not endorse the opinions of third parties expressed on any web sites linked to.</p>
-      <p class="normal">Links to another web site, or introductions by way of the provision of an address or other contact details shall not be construed as an endorsement by us of that web site, individual or organisation, or of the products or services described therein unless expressly stated on this site.</p>
-      <p class="normal">Wholesale reproduction of this site or any information contained within it is expressly forbidden. A limited amount of false information may deliberately appear on this site, to enable the providers to identify and protect by taking appropriate legal action, their intellectual property and any copyrights and trademarks that may exist. </p>
+    <h2 >Legal Notice - Disclaimer</h2>
+      <p >All steps have been taken to ensure that the information published on this site is as accurate as possible. The providers or our agents, cannot accept responsibility for any errors, omissions or inaccuracies or for any consequence arising as a result, to either those that choose to advertise here or those that use any of the services provided on this site.</p>
+      <p >In addition we reserve the right to modify the information held on this web site without notice, and whilst we are willing to amend details on request by the original supplier of such details we provide no guarantees of how long it may take to effect such changes.</p>
+      <p >The providers or our agents cannot accept responsibility for any loss, injury or damage sustained as a result of using any of the services provided on this web site, or by referrals to any other individual/organisation that appear on this web-site, whether financial, material, physical or mental.</p>
+      <p >Unless clearly stated, any opinions, recommendations, information or advice that appear on this site are not necessarily those of the providers of this site, and caution should be exercised before acting upon any opinions, recommendations, information or advice.</p>
+      <p > This site also contains links to other web sites which are completely independent of this web site and we make no representation or warranty as to the accuracy, completeness or authenticity of any opinions, recommendations, information or advice contained in any such linked web site. Furthermore, we do not endorse the opinions of third parties expressed on any web sites linked to.</p>
+      <p >Links to another web site, or introductions by way of the provision of an address or other contact details shall not be construed as an endorsement by us of that web site, individual or organisation, or of the products or services described therein unless expressly stated on this site.</p>
+      <p >Wholesale reproduction of this site or any information contained within it is expressly forbidden. A limited amount of false information may deliberately appear on this site, to enable the providers to identify and protect by taking appropriate legal action, their intellectual property and any copyrights and trademarks that may exist. </p>
       <h2 class="heading1">IF YOU FIND THE TERMS OF USE TO BE UNACCEPTABLE, PLEASE LEAVE THIS WEB SITE NOW.<br>
       <br>
     </h2>
-
-
+  </div>
 </div>
-<footer class="main-footer">
-   <span><a href="legal.html" id="legal">Legal Notices</span>
-   <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
-</footer>
-<span class="webdev"><p>Website Developer Firstview Lettings Ltd</p></span>
-</div>
+</main>
+
+    <footer class="main-footer">
+      <div>
+        <span>Enquiries</span><br>
+        <a href="tel:07834 342897">07834 342897</a><br>
+        <a href="mailto:firstview.let@btinternet.com">firstview.let@btinternet.com</a>
+      </div>
+      <span>
+        Firstview Lettings Ltd.<br>
+        Registration No: 5098005<br>
+        Registered Office:<br>
+        367B Church Rd, Frampton Cotterell,<br>
+        Bristol, BS36 2AQ
+      </span>
+      <span id="copy">&copy Firstview Lettings Ltd 2004-2020.</span>
+      <div>
+       <a href="legal.html" id="legal">Legal Notices</a><br>
+       <a href="">Privacy Policy</a>
+      </div>
+      <span class="webdev">Crafted by Firstview Lettings Ltd</span>
+    </footer>
 
 
 <script type="text/javascript" src="../Library/jquery-1.11.2.min.js"></script>
